Prevent horizontal scrollbar on /docs/config/

--- a/_includes/index.css
+++ b/_includes/index.css
@@ -183,6 +183,13 @@ pre,
 code {
 	font-family: Monaco, monospace;
 }
+code {
+	-ms-word-break: break-all;
+	word-break: break-word;
+	-webkit-hyphens: manual;
+	-moz-hyphens: manual;
+	hyphens: manual;
+}
 pre + pre[class*="language-"] {
 	margin-top: 1em;
 }
